<resources>
    <string name="app_name">LeaderBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="learning_hours">learning hours,</string>
    <string name="are_you_sure">Are you sure ?</string>
</resources>