<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".SubmissionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/awesome_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:src="@drawable/launch_gads"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtHeader"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFA500"
        android:textSize="20sp"
        android:layout_marginTop="150dp"
        android:text="@string/project_submission" />

    <View
        android:layout_below="@+id/txtHeader"
        android:id="@+id/view_divider"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/faded_line"/>


    <LinearLayout
        android:layout_below="@+id/view_divider"
        android:id="@+id/layout_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_gray"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:background="@drawable/bg_gray"
            android:hint="@string/last_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@android:color/black" />

    </LinearLayout>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_names"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_gray"
        android:hint="@string/email_address"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/etGit_link"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/emailAddress"
        android:layout_marginStart="10dp"
        android:inputType="textUri"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_gray"
        android:hint="@string/project_on_github_link"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@android:color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etGit_link"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_transparent"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>